Bài tập Phát triển ứng dụng Blogs

--- a/exercise/blogs/src/main/resources/templates/list.html
+++ b/exercise/blogs/src/main/resources/templates/list.html
@@ -1,30 +1,59 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>List of blog</title>
-    <link rel="stylesheet" th:href="@{/static/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
 <div class="container">
-    <a th:href="@{/blog/add}">Add new blog</a>
-    <h3>List of blog</h3>
+    <div class="dropdown">
+        <span><b>Category</b></span>
+        <button class="btn btn-outline-success dropdown-toggle" type="button" id="dropdownMenuButton1"
+                data-bs-toggle="dropdown" aria-expanded="false" th:text="${category.categoryName}">
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1"
+            th:object="${categories}">
+            <li>
+                <a class="dropdown-item" th:href="@{/blog}" th:text="All"></a>
+            </li>
+            <li>
+                <a class="dropdown-item" th:each="c : ${categories}"
+                   th:href="@{/blog(id=${c.categoryId})}" th:text="${c.categoryName}"></a>
+            </li>
+        </ul>
+    </div>
+
+    <!--    <div>-->
+    <!--        <form th:object="${category}" th:action="@{/blog}" method=post>-->
+    <!--            <select class="btn btn-link" th:field="*{categoryId}" onchange=this.form.submit()>-->
+    <!--                <option th:each="c : ${categories}"-->
+    <!--                        th:value="${c.categoryId}"-->
+    <!--                        th:text="${c.categoryName}"-->
+    <!--                        th:selected="${category.categoryName}">-->
+    <!--                </option>-->
+    <!--            </select>-->
+    <!--        </form>-->
+    <!--    </div>-->
+
     <table class="table">
         <thread>
             <tr>
                 <th scope="col">STT</th>
                 <th scope="col">Title</th>
                 <th scope="col">Date</th>
+                <th scope="col">Category</th>
                 <th scope="col"></th>
                 <th scope="col"></th>
                 <th scope="col"></th>
             </tr>
         </thread>
         <tbody>
-        <tr class="col" th:each="blog, status : ${blogs}">
+        <tr class="col" th:each="blog, status : ${blogPage}">
             <td th:text="${status.count}"></td>
             <td th:text="${blog.title}"></td>
             <td th:text="${blog.date}"></td>
+            <td th:text="${blog.category.categoryName}"></td>
             <td><a th:href="@{/blog/detail/{id}(id=${blog.id})}">Detail</a></td>
             <td><a th:href="@{/blog/delete/{id}(id=${blog.id})}">Delete</a></td>
             <td><a th:href="@{/blog/edit/{id}(id=${blog.id})}">Edit</a></td>
@@ -34,7 +63,15 @@
         </tr>
         </tbody>
     </table>
+    <div>
+        <a th:if="${blogPage.hasPrevious()}"
+           th:href="@{/blog(page=${blogPage.number - 1}, id=${category.categoryId})}">Pre</a>
+        <span th:text="|page ${blogPage.number+1} / ${blogPage.totalPages}|"></span>
+        <a th:if="${blogPage.hasNext()}"
+           th:href="@{/blog(page=${blogPage.number + 1}, id=${category.categoryId})}">Next</a>
+    </div>
+    <a th:href="@{/blog/add}">Add new blog</a>
 </div>
 </body>
-<script th:src="@{/static/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </html>
