--- a/exercise/blogs/src/main/resources/templates/update.html
+++ b/exercise/blogs/src/main/resources/templates/update.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Update</title>
-    <link rel="stylesheet" th:href="@{/static/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
 <div class="container">
@@ -19,8 +19,18 @@
         </div>
         <div class="mb-3">
             <label th:for="content" class="col-form-label">Content:</label>
-            <textarea cols="20" rows="20" class="form-control"
+            <textarea cols="20" rows="15" class="form-control"
                       th:field="${blog.content}" th:id="content" th:name="content"></textarea>
+        </div>
+        <div class="mb-3">
+            <label th:for="category" class="col-form-label">Category:</label>
+            <select th:field="*{category.categoryId}">
+                <option th:each="category : ${categories}"
+                        th:value="${category.getCategoryId()}"
+                        th:text="${category.getCategoryName()}"
+                        th:selected="${category.getCategoryName()}">
+                </option>
+            </select>
         </div>
         <div class="mb-3">
             <input type="hidden" class="form-control" th:id="date" th:name="date"
@@ -32,7 +42,6 @@
     </form>
 </div>
 
-
 </body>
-<script th:src="@{/static/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </html>
