--- a/exercise/blogs/src/main/resources/templates/add.html
+++ b/exercise/blogs/src/main/resources/templates/add.html
@@ -3,29 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <title>Create new blog</title>
-    <link rel="stylesheet" th:href="@{/static/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
 <div class="container">
     <form th:object="${blog}" th:action="@{/blog/add}" method="post">
         <div class="mb-3">
             <label th:for="title" class="col-form-label">Title:</label>
-            <input type="text" class="form-control" th:field="*{title}" th:id="title"/>
+            <input type="text" class="form-control" th:name="title" th:id="title"
+                   th:value="${blog.title}"/>
         </div>
         <div class="mb-3">
             <label th:for="content" class="col-form-label">Content:</label>
-            <textarea cols="20" rows="20" class="form-control"
-                      th:field="*{content}" th:id="content"></textarea>
+            <textarea cols="20" rows="15" class="form-control"
+                      th:name="content" th:id="content" th:value="${blog.content}"></textarea>
         </div>
         <div class="mb-3">
-            <input type="hidden" class="form-control" th:id = "date" th:name="date"
+            <input type="hidden" class="form-control" th:id="date" th:name="date"
                    th:value="${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}">
         </div>
+        <div class="mb-3">
+            <label th:for="category" class="col-form-label">Category:</label>
+            <select class="btn btn-outline-primary" th:field="*{category.categoryId}">
+                <option th:each="c : ${categories}"
+                        th:value="${c.getCategoryId()}"
+                        th:text="${c.getCategoryName()}">
+                </option>
+            </select>
+            <input type="submit" name="action" class="btn btn-outline-success" value="Add new"/>
+        </div>
         <div class="modal-footer">
-            <input type="submit" class="btn btn-secondary" value="OK">
+            <input type="submit" name="action" class="btn btn-success" value="Save">
         </div>
     </form>
+
+
+    <div class="modal fade"
+         id="creatModal"
+         tabindex="-1"
+         aria-labelledby="creatModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="creatModalLabel">Create</h5>
+                    <button type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close">
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form th:object="${category}" th:action="@{/blog/add}" method="post">
+                        <div class="mb-3">
+                            <input type="text" class="form-control" th:field="${category.categoryName}"/>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                                Close
+                            </button>
+                            <input type="submit" class="btn btn-secondary" value="OK">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </div>
 </body>
-<script th:src="@{/static/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </html>
