--- a/exercise/blogs/src/main/resources/templates/detail.html
+++ b/exercise/blogs/src/main/resources/templates/detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Detail</title>
-    <link rel="stylesheet" th:href="@{/static/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
 <div class="container">
@@ -17,11 +17,15 @@
             <p th:text="${blog.content}"></p>
         </div>
         <div class="mb-3">
+            <label class="col-form-label"><b>Category:</b></label>
+            <p th:text="${blog.category.categoryName}"></p>
+        </div>
+        <div class="mb-3">
             <label class="col-form-label"><b>Date:</b></label>
             <p th:text="${blog.date}"></p>
         </div>
     </div>
 </div>
 </body>
-<script th:src="@{/static/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </html>
