--- a/exercise/blogs/src/main/resources/templates/add.html
+++ b/exercise/blogs/src/main/resources/templates/add.html
@@ -13,10 +13,11 @@
             <input type="text" class="form-control" th:name="title" th:id="title"
                    th:value="${blog.title}"/>
         </div>
+
         <div class="mb-3">
             <label th:for="content" class="col-form-label">Content:</label>
             <textarea cols="20" rows="15" class="form-control"
-                      th:name="content" th:id="content" th:value="${blog.content}"></textarea>
+                      th:field="*{content}" th:value="${blog.content}"></textarea>
         </div>
         <div class="mb-3">
             <input type="hidden" class="form-control" th:id="date" th:name="date"
