--- a/exercise/blogs/src/main/resources/templates/list.html
+++ b/exercise/blogs/src/main/resources/templates/list.html
@@ -65,7 +65,7 @@
     </table>
     <div>
         <a th:if="${blogPage.hasPrevious()}"
-           th:href="@{/blog(page=${blogPage.number - 1}, id=${category.categoryId})}">Pre</a>
+           th:href="@{/blog(page=${blogPage.number - 1}, id=${category.categoryId})}">Previous</a>
         <span th:text="|page ${blogPage.number+1} / ${blogPage.totalPages}|"></span>
         <a th:if="${blogPage.hasNext()}"
            th:href="@{/blog(page=${blogPage.number + 1}, id=${category.categoryId})}">Next</a>
