--- a/exercise/furama/src/main/resources/templates/furama/home.html
+++ b/exercise/furama/src/main/resources/templates/furama/home.html
@@ -10,24 +10,9 @@
 <div class="container">
     <div th:insert="~{furama/layout::menu}"></div>
 
-    <!--    <div id="menu">-->
-    <!--        <div id="position-menu">-->
-    <!--            <div id="position-menu-link">-->
-    <!--                <a href="">Home</a>-->
-    <!--                <a href="">Employee</a>-->
-    <!--                <a th:href="@{/f/customer}">Customer</a>-->
-    <!--                <a href="">Service</a>-->
-    <!--                <a href="">Contract</a>-->
-    <!--            </div>-->
-    <!--            <div id="position-menu-search" class="input-group mb-3">-->
-    <!--                <input type="text" class="form-control" placeholder="search" aria-label="Recipient's username"-->
-    <!--                       aria-describedby="button-addon2">-->
-    <!--                <button class="btn btn-outline-secondary" type="button" id="button-addon2">search</button>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--    </div>-->
-
     <div id="body-page">
+        <h3>List of customer</h3>
+        <a th:href="@{/f/customer/add}">Add new customer</a>
         <table class="table">
             <thread>
                 <tr>
@@ -64,11 +49,7 @@
             <a th:if="${customerPage.hasNext()}"
                th:href="@{/f/customer(page=${customerPage.number + 1})}">Next</a>
         </div>
-
-
     </div>
-
-
 </div>
 </body>
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
