--- a/exercise/flower_shop/src/main/resources/templates/flower/layout.html
+++ b/exercise/flower_shop/src/main/resources/templates/flower/layout.html
@@ -6,21 +6,14 @@
 </head>
 <body>
 <div th:fragment="menu">
-    <a class="navbar-brand" th:href="@{/library/book}">Book</a>
+    <a class="navbar-brand" th:href="@{/flower/shop}">Shop</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a class="navbar-brand" th:href="@{/library/student}">Student</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <a class="navbar-brand" th:href="@{/library/card}">Card</a>
+    <a class="navbar-brand" th:href="@{/cart}">Cart</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
